<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtv_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtv_titulo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/edtxt_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edtxt_nombre"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/txtv_titulo"
        app:layout_constraintStart_toStartOf="@+id/txtv_titulo"
        app:layout_constraintTop_toBottomOf="@+id/txtv_titulo"
        app:layout_constraintVertical_bias="0.13" />

    <EditText
        android:id="@+id/edtxt_apellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/edtxt_apellido"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtxt_nombre"
        app:layout_constraintStart_toStartOf="@+id/edtxt_nombre"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_nombre"
        app:layout_constraintVertical_bias="0.07999998" />

    <EditText
        android:id="@+id/edtxtx_correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/edtxt_correo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtxt_telefono"
        app:layout_constraintStart_toStartOf="@+id/edtxt_telefono"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_telefono"
        app:layout_constraintVertical_bias="0.100000024" />

    <EditText
        android:id="@+id/edtxt_telefono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:hint="@string/edtxt_telefono"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtxt_apellido"
        app:layout_constraintStart_toStartOf="@+id/edtxt_apellido"
        app:layout_constraintTop_toBottomOf="@+id/edtxt_apellido"
        app:layout_constraintVertical_bias="0.060000002" />

    <EditText
        android:id="@+id/edtxtx_contrasenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/edtxt_constrasenha"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtxtx_correo"
        app:layout_constraintStart_toStartOf="@+id/edtxtx_correo"
        app:layout_constraintTop_toBottomOf="@+id/edtxtx_correo"
        app:layout_constraintVertical_bias="0.13999999" />

    <Button
        android:id="@+id/btn_registrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_registro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edtxtx_contrasenha"
        app:layout_constraintStart_toStartOf="@+id/edtxtx_contrasenha"
        app:layout_constraintTop_toBottomOf="@+id/edtxtx_contrasenha"
        app:layout_constraintVertical_bias="0.29000002" />

</androidx.constraintlayout.widget.ConstraintLayout>